change html tag

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -24,7 +24,7 @@
       <p>{{site.location}}</p>
     </section>
       <h3>Email</h3>
-      <p><a href="mailto:{{site.email}}">{{site.email}}</a></p>
+      <p><a> href="mailto:{{site.email}}">{{site.email}}</a></p>
     </section>
     <section>
       <h3>Social</h3>
