--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -23,12 +23,13 @@
       <h3>Location</h3>
       <p>{{site.location}}</p>
     </section>
+    <section class="split contact">  
       <h3>Email</h3>
-      <p><a> href="mailto:{{site.email}}">{{site.email}}</a></p>
+      <p>{{site.email}}</p>
     </section>
     <section>
       <h3>Social</h3>
-      <ul class="icons alt"
+      <ul> class="icons alt"
         <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
         <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
         <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
