--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -21,10 +21,8 @@
   <section class="split contact">
     <section class="alt">
       <h3>Location</h3>
-      <p>{{site.location}}</p>
-    </section>
-    <section class="split contact">  
-      <h3>Email</h3>
+      <p>{{site.location}}</p>  
+      <h3><a>Email<a></h3>
       <p>{{site.email}}</p>
     </section>
     <section>
