--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -19,15 +19,11 @@
     </form>
   </section>
   <section class="split contact">
-    <section class="alt">
-      <h3>Location</h3>
-      <p>{{site.location}}</p>
-    </section>
     <section>
       <h3>Email</h3>
       <p><a href="mailto:{{site.email}}">{{site.email}}</a></p>
     </section>
-    <section>
+    <section>s
       <h3>Social</h3>
       <ul class="icons alt">
         <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
