--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -22,8 +22,8 @@
     <section>
       <h3>Email</h3>
       <p><a href="mailto:{{site.email}}">{{site.email}}</a></p>
-
-      
+    </section>
+    <section class="split contact">
       <h3>Social</h3>
       <ul class="icons alt">
         <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
